Quick lil dark mode to stop burning eyes

--- a/App.css
+++ b/App.css
@@ -1,4 +1,18 @@
 .avatar {
-  height:100px;
+    height:100px;
 }
 
+body{
+    background-color: #0d1117;
+}
+
+span{
+    color:white;
+}
+
+.textBar{
+    width: 440px;
+    max-width: 100%;
+    margin-right: 5px;
+    background-color: #010409;
+}
